update css file

--- a/css/styles.css
+++ b/css/styles.css
@@ -389,7 +389,7 @@ img {
   margin-right: 120px;
 }
 
-.footer-right {
+.footer-center {
   max-width: 208px;
   margin-right: 80px;
 }
@@ -462,13 +462,15 @@ img {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .is-open {
+.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
-} */
+}
 
 .modal {
   width: 408px;
@@ -483,6 +485,7 @@ img {
   transform: translate(-50%, -50%);
   padding: 24px;
   padding-top: 72px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
@@ -491,19 +494,23 @@ img {
   right: 24px;
   border-radius: 50%;
   background-color: #e7e9fc;
-  border: none;
-  padding: 8px;
+  padding: 0px;
   width: 24px;
   height: 24px;
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn:hover,
 .modal-close-btn:active {
   background-color: #404bbf;
   fill: #fff;
+  border: none;
 }
 
 .modal-text {
@@ -524,10 +531,12 @@ img {
   background-color: transparent;
   padding-left: 38px;
   outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus,
 .modal-textarea:focus {
+  border-color: #4d5ae5;
   border-color: #4d5ae5;
 }
 
@@ -549,8 +558,9 @@ img {
   line-height: 1.16667;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  display: inline-block;
   margin-bottom: 4px;
+  line-height: 1.17;
+  display: block;
 }
 
 .modal-field {
@@ -558,7 +568,7 @@ img {
 }
 
 .modal-field-area {
-  margin-bottom: 20px;
+  margin-bottom: 16px;
 }
 
 .modal-input-wrap {
@@ -570,6 +580,12 @@ img {
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-icon:hover,
+.modal-icon:active {
+  fill: #4d5ae5;
 }
 
 .modal-textarea {
@@ -581,38 +597,55 @@ img {
   padding: 8px 16px;
   outline: transparent;
   resize: none;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-textarea:focus {
+  border-color: #4d5ae5;
+}
+
+.modal-check-container {
+  margin-bottom: 24px;
 }
 
 .modal-check-text {
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
   display: flex;
   align-items: center;
   margin-bottom: 24px;
-  a {
-    line-height: 1.33333;
-    text-decoration: underline;
-    text-decoration-skip-ink: none;
-    color: #4d5ae5;
-  }
-
-  span {
-    width: 16px;
-    height: 16px;
-    border-radius: 2px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    margin-right: 8px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    fill: transparent;
-  }
 }
 
-.modal-check:checked + .modal-check-text span {
+.modal-check-link {
+  color: #4d5ae5;
+  line-height: 1.33333;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+}
+
+.modal-check-box {
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  margin-right: 8px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  fill: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-check:checked + label span {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
@@ -631,9 +664,11 @@ img {
   letter-spacing: 0.04em;
   text-align: center;
   color: #fff;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
   border: none;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-send-btn:hover,
@@ -658,7 +693,9 @@ img {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: transparent;
   color: #fff;
-  padding: 8px 16px;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
 }
 
 .footer-sub-btn {
@@ -675,7 +712,9 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 16px;
+  min-width: 165px;
+  height: 40px;
+  cursor: pointer;
 }
 
 .footer-sub-btn:hover,
@@ -690,4 +729,14 @@ img {
 
 .footer-icon {
   fill: #fff;
+  margin-left: 16px;
+}
+
+.footer-icon-close {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-icon-close:focus,
+.footer-icon-close:active {
+  fill: #ffffff;
 }
