--- a/css/styles.css
+++ b/css/styles.css
@@ -635,6 +635,7 @@ img {
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   margin-right: 8px;
+  display: flex;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -642,7 +643,6 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: inline-flex;
 }
 
 .modal-check:checked + label span {
@@ -737,7 +737,7 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-icon-close:hover,
-.footer-icon-close:focus {
+.modal-close-btn:hover .footer-icon-close,
+.modal-close-btn:focus .footer-icon-close {
   fill: #ffffff;
 }
