--- a/css/styles.css
+++ b/css/styles.css
@@ -453,6 +453,11 @@ img {
   background: #31d0aa;
 }
 
+.footer-form {
+  display: flex;
+  gap: 24px;
+}
+
 .overlay {
   width: 100%;
   height: 100%;
@@ -466,11 +471,11 @@ img {
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .is-open {
+.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
-} */
+}
 
 .modal {
   width: 408px;
@@ -720,11 +725,6 @@ img {
 .footer-sub-btn:hover,
 .footer-sub-btn:active {
   background-color: #404bbf;
-}
-
-.footer-form {
-  display: flex;
-  gap: 24px;
 }
 
 .footer-icon {
